<resources>
    <string name="app_name">eggspert-mobile</string>
    <string name="description_opening_2">Kelola peternakan unggas Anda dengan efisien dan mudah.  Mulai dari melacak kesehatan ternak hingga mengatur tugas harian, pegang kendali atas setiap aspek.</string>
    <string name="opening_3">Pantau pendapatan peternakan unggas Anda dengan mudah dan efektif. Dengan fitur ini, Anda dapat mengelola pemasukan keuangan anda secara real-time. </string>
    <string name="opening_4">Apakah Anda siap untuk membawa peternakan unggas Anda ke level berikutnya? Mulailah mengelola dengan lebih cerdas dan maksimalkan potensi peternakan Anda!</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Strings buat bagian edit profil -->
    <string name="profile_photo">Profile picture of the user</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_nomor_handphone">Masukkan Nomor Handphone</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="button_simpan">Button Simpan</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="icon_ubah_profil">Icon Ubah Profil</string>
    <string name="button_kembali">Button Kembali</string>

    <!-- Strings buat bagian profil -->
    <string name="button_penilaian_app">Button Penilaian Aplikasi</string>
    <string name="button_ubah_profil">Button Ubah Profil</string>
    <string name="button_ubah_password">Button Ubah Password</string>
    <string name="button_kebijakan_privasi">Button Kebijakan Privasi</string>
    <string name="button_ketentuan_layanan">Button Ketentuan Layanan</string>
    <string name="button_hubungi_kami">Button Hubungi Kami</string>
    <string name="akun_pengguna">Akun Pengguna</string>'
    <string name="nama_pengguna">Rusdi</string>
    <string name="email_pengguna">rusdi@gmail.com</string>
    <string name="no_hp_pengguna">+6281934563345</string>
    <string name="ubah_profil">Ubah profil</string>
    <string name="ubah_password">Ubah password</string>
    <string name="kebijakan_privasi">Kebijakan privasi</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="penilaian_aplikasi">Beri penilaian aplikasi</string>
    <string name="hubungi_kami">Hubungi kami</string>
    <string name="akun">Akun</string>
    <string name="foto_profil">Foto profil</string>
    <string name="button_keluar">Button keluar</string>


    <!-- Strings buat bagian informasi kandang -->
    <string name="button_kembali_informasi_kandang">Button Kembali</string>
    <string name="tambah_kandang">Tambah Kandang</string>
    <string name="informasi_kandang">Informasi Kandang</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>