<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".EditProfileActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="324dp"
        android:layout_height="61dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/masukkan_email"
        android:inputType="textEmailAddress"
        android:text="@string/masukkan_email"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        tools:text="rusdi@gmail.com" />

    <TextView
        android:id="@+id/judulFormEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:text="@string/email"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="322dp"
        android:layout_height="58dp"
        android:autofillHints="name"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/masukkan_nama_lengkap"
        android:inputType="text"
        android:text="@string/masukkan_nama_lengkap"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401"
        tools:text="Rusdi" />

    <TextView
        android:id="@+id/judulFormNamaLengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/nama_lengkap"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/judulFormNomorHandphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/nomor_handphone"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:autofillHints="phone"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/masukkan_nomor_handphone"
        android:inputType="phone"
        android:text="@string/masukkan_nomor_handphone"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        tools:text="+6281934563345" />

    <ImageButton
        android:id="@+id/button_simpan"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_simpan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855"
        app:srcCompat="@drawable/button_simpan"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/button_kembali"
        android:layout_width="118dp"
        android:layout_height="68dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_simpan"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        app:srcCompat="@drawable/button_kembali"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        app:itemIconTint="@color/light_choco"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ImageView
        android:id="@+id/userPhotoProfile"
        android:layout_width="115dp"
        android:layout_height="101dp"
        android:contentDescription="@string/profile_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/default_photo_profile" />

    <ImageView
        android:id="@+id/iconUbahProfil"
        android:layout_width="36dp"
        android:layout_height="37dp"
        android:contentDescription="@string/icon_ubah_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        app:srcCompat="@drawable/icon_edit_profile" />

    <TextView
        android:id="@+id/informasiKandang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/edit_profile"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />
</androidx.constraintlayout.widget.ConstraintLayout>