<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".ProfileActivity">


    <View
        android:id="@+id/batasProfilDanAkun"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_yellow_profile"
        app:layout_constraintBottom_toBottomOf="@+id/buttonKeluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <View
        android:id="@+id/batasAkunDanKebijakanPrivasi"
        android:layout_width="429dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_yellow_profile"
        app:layout_constraintBottom_toBottomOf="@+id/buttonKeluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <View
        android:id="@+id/batasKebijakanPrivasiDanBar"
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/light_yellow_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <TextView
        android:id="@+id/akunPengguna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/akun_pengguna"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/userPhotoProfile"
        android:layout_width="58dp"
        android:layout_height="54dp"
        android:contentDescription="@string/foto_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@drawable/default_photo_profile" />

    <TextView
        android:id="@+id/userPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_hp_pengguna"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/no_hp_pengguna"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/akun_pengguna"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nama_pengguna"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonKeluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/email_pengguna"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email_pengguna"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="@+id/buttonKeluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/ubahPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ubah_password"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <TextView
        android:id="@+id/ubahProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ubah_profil"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ubah_profil"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <ImageButton
        android:id="@+id/arrowUbahPassword"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_ubah_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        app:srcCompat="@drawable/right_arrow" />

    <ImageButton
        android:id="@+id/arrowUbahProfil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_ubah_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/right_arrow" />

    <ImageView
        android:id="@+id/iconUbahProfil"
        android:layout_width="22dp"
        android:layout_height="25dp"
        android:contentDescription="@string/ubah_profil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/change_profile" />

    <ImageView
        android:id="@+id/iconUbahPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ubah_password"
        app:layout_constraintBottom_toBottomOf="@+id/buttonKeluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@drawable/change_password" />

    <TextView
        android:id="@+id/akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/akun"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/akun"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/heading2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/ketentuanLayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ketentuan_layanan"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/penilaianAplikasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/penilaian_aplikasi"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <ImageButton
        android:id="@+id/arrowPenilaianAplikasi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_penilaian_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        app:srcCompat="@drawable/right_arrow" />

    <ImageButton
        android:id="@+id/arrowHubungiKami"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_hubungi_kami"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792"
        app:srcCompat="@drawable/right_arrow" />

    <ImageButton
        android:id="@+id/arrowKetentuanLayanan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_ketentuan_layanan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        app:srcCompat="@drawable/right_arrow" />

    <ImageButton
        android:id="@+id/arrowKebijakanPrivasi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white_background"
        android:contentDescription="@string/button_kebijakan_privasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/right_arrow" />


    <TextView
        android:id="@+id/hubungiKami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hubungi_kami"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <ImageView
        android:id="@+id/iconKetentuanLayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ketentuan_layanan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/service_policy" />

    <ImageView
        android:id="@+id/iconPenilaianAplikasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/penilaian_aplikasi"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/iconHubungiKami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hubungi_kami"
        app:layout_constraintBottom_toBottomOf="@+id/batasKebijakanPrivasiDanBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.869"
        app:srcCompat="@drawable/headphone" />

    <ImageView
        android:id="@+id/iconKebijakanPrivasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kebijakan_privasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/privacy_policy" />

    <TextView
        android:id="@+id/kebijakanPrivasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/kebijakan_privasi"
        android:textColor="@color/cokelat"
        android:textSize="@dimen/normal_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageButton
        android:id="@+id/buttonKeluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background=""
        android:contentDescription="button_keluar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        app:srcCompat="@drawable/button_keluar"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/light_choco"
        app:itemTextColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>